--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Biblioteca</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<script type="text/javascript" src="js.js"></script>
 </head>
 <body>
 <div id="box1">
